[build-system]
requires = [ "setuptools>=61" ]

[project]
name = "pero-ocr"
version = "0.6.1"
description = "Toolkit for advanced OCR of poor quality documents"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = ["OCR", "Layout analysis", "handwriting recognition"]

authors = [
  {email = "hradis@fit.vutbr.cz", name = "Michal Hradiš"}
]
maintainers = [
  {email = "ibenes@fit.vutbr.cz", name = "Karel Beneš"}
]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy==1.24.4",
    "opencv-python==4.8.0.74",
    "lxml==4.9.3",
    "lmdb==1.4.1",
    "levenshtein==0.21.1",
    "scipy==1.9.3",
    "numba==0.57.1",
    "torch==2.0.1",
    "brnolm==0.3.0",
    "scikit-learn==1.3.0",
    "scikit-image==0.21.0",
    "shapely==1.8.0",
    "safe-gpu==1.5.1",
    "pyamg==5.0.1",
    "imgaug==0.4.0",
    "arabic_reshaper==3.0.0",
]


[project.urls]
homepage = "https://pero.fit.vutbr.cz/"
repository = "https://github.com/DCGM/pero-ocr"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"pero_ocr" = "pero_ocr"
"pero_ocr.user_scripts" = "user_scripts"

[project.scripts]
compare-page-xml-texts = "pero_ocr.user_scripts.compare_page_xml_texts:main"
merge-ocr-results = "pero_ocr.user_scripts.merge_ocr_results:main"
parse-folder = "pero_ocr.user_scripts.parse_folder:main"
select-embed-id = "pero_ocr.user_scripts.select_embed_id:main"
