[build-system]
requires = [ "setuptools>=61" ]

[project]
name = "pero-ocr"
version = "0.7.0"
description = "Toolkit for advanced OCR of poor quality documents"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["OCR", "Layout analysis", "handwriting recognition"]

authors = [
  {email = "hradis@fit.vutbr.cz", name = "Michal Hradiš"}
]
maintainers = [
  {email = "ibenes@fit.vutbr.cz", name = "Karel Beneš"}
]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "opencv-python",
    "lxml",
    "lmdb",
    "levenshtein",
    "scipy",
    "numba",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "brnolm>=0.3.0",
    "scikit-learn",
    "scikit-image",
    "shapely",
    "safe-gpu>=1.5.1",
    "pyamg",
    "imgaug",
    "arabic_reshaper",
    "ultralytics",
    "music21"
]


[project.urls]
homepage = "https://pero.fit.vutbr.cz/"
repository = "https://github.com/DCGM/pero-ocr"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"pero_ocr" = "pero_ocr"
"pero_ocr.user_scripts" = "user_scripts"

[project.scripts]
compare-page-xml-texts = "pero_ocr.user_scripts.compare_page_xml_texts:main"
merge-ocr-results = "pero_ocr.user_scripts.merge_ocr_results:main"
parse-folder = "pero_ocr.user_scripts.parse_folder:main"
select-embed-id = "pero_ocr.user_scripts.select_embed_id:main"
